    - added instrument database support on Windows
      works with both standalone mode and VST plugin.
      the instruments DB file is located in
      %USERPROFILE%\.linuxsampler\instruments.db which allows different
      databases for each windows user
      if no DB is present it automatically creates the .linuxsampler subdir
      and then creates an empty DB

  * Gigasampler format engine:
    - fixed a memory leak that could happen when a channel was deleted
      while notes were playing
    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the
      respective FX send MIDI controller was used
    - added support for GM global device volume SysEx message
      (can be selected at compile time to either apply globally to the
      whole sampler [default] or only to the sampler channels that are
      connected to the respective MIDI input port the SysEx message arrived
      on)
    - bugfix: notes triggered at position 0 in the audio buffer were
      sometimes wrongly killed in the same buffer, causing no sound to
      be played
    - added support for chromatic / drumkit mode Roland GS Sysex message
      which is usally used to switch a part between chromatic sounds and
      drumkit sounds (as opposed to their common default setting of MIDI
      part 10 being a drumkit part and all other ones chromatic parts), in
      LS however one can switch between the first 16 MIDI instrument maps
      defined for the sampler
    - made it possible to create multiple sample channels even if the
      audio thread isn't running
    - fixed crash when removing channel with active voices (#116)
    - bugfix: on sample reference changes (instrument editor), only
      un-cache the respective sample if it's really not used by any